fix: add active background color for selected menu items in collapsed menu

--- a/packages/core/client/src/global.less
+++ b/packages/core/client/src/global.less
@@ -40,3 +40,8 @@
   .ant-menu-submenu-popup {
     backdrop-filter: none;
   }
+
+  // Fix the style of the top collapsed menu button dropdown when clicking
+  .ant-menu-item.ant-menu-item-only-child.ant-pro-base-menu-horizontal-menu-item:active {
+    background-color: var(--colorBgMenuItemSelected) !important;
+  }
